--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -23,6 +23,7 @@ jobs:
 
       - run: npm ci
       - run: npm run lint:eslint:check
+
   commitlint:
     name: commitlint
     runs-on: ubuntu-latest
@@ -35,4 +36,5 @@ jobs:
           node-version: "lts/hydrogen"
 
       - run: npm ci
-        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
+      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
